# sales-forecast-with-python-time-series

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: base.yaml
data/: sales-data-simple.csv  sales_data.csv
docs/: architecture.md  development-guidelines.md  functional-design.md  glossary.md  product-requirements.md  repository-structure.md
docs/ideas/: initial-requirements.md
linear-regression/: 2.add-monthly-dummy.ipynb  3.add-special-holiday-dummy.ipynb  5. add_residual_effect.ipynb
linear-regression/.ipynb_checkpoints/: 2.add-monthly-dummy-checkpoint.ipynb  4.add-time-lag-checkpoint.ipynb
outputs/reports/20260704/: lightgbm_report_20260704.md  linear_regression_report_20260704.md  model_comparison_report_20260704.md  prophet_report_20260704.md  sarimax_report_20260704.md
prophet/: prophet_add_regressor.ipynb  prophet_hyper_parameter.ipynb
prophet/.ipynb_checkpoints/: prophet_add_regressor-checkpoint.ipynb  prophet_hyper_parameter-checkpoint.ipynb
sarimax/.ipynb_checkpoints/: sarimax-checkpoint.ipynb  sarimax_hyperparameter_tuning-checkpoint.ipynb
src/sales_forecast/: __init__.py  __main__.py  cli.py  config.py  data.py  evaluate.py  features.py  forecast.py  metrics.py  pipeline.py  report.py  train.py  validation.py
src/sales_forecast/models/: __init__.py  base.py  baseline.py  lightgbm.py  linear_regression.py  optional.py  prophet.py  registry.py  (+1 more)
tests/: conftest.py  test_baseline.py  test_cli.py  test_data.py  test_evaluate.py  test_features.py  test_metrics.py  test_optional_models.py  test_report.py  test_validation.py
(+5 files in other folders)
