[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sales-forecast"
version = "0.1.0"
description = "Retail weekly sales forecasting pipeline"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "PyYAML>=6.0",
  "scikit-learn>=1.2",
  "lightgbm>=4.0",
  "prophet>=1.1",
  "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.5"]
advanced-models = [
  "lightgbm>=4.0",
  "prophet>=1.1",
  "statsmodels>=0.14",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
